[package]
name = "bls"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2018"

[dependencies]
bls_eth_rust = { git = "https://github.com/sigp/bls-eth-rust", branch = "eq-and-init" }
eth2_hashing = "0.1.0"
hex = "0.3"
rand = "0.7.2"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_hex = { path = "../serde_hex" }
eth2_ssz = "0.1.2"
eth2_ssz_types = { path = "../ssz_types" }
tree_hash = "0.1.0"

[features]
fake_crypto = []
